# KnowMore

./: .gitignore  README.md  plan.txt  pyproject.toml
configs/: config.yaml
data/: index.json
kb/customer1/docs/: onboarding.md
kb/customer1/files/: Design.pdf.meta.yaml
kb/customer1/info/: info.txt
kb/customer2/docs/: onboarding.md
kb/customer2/files/: Design.pdf.meta.yaml
kb/customer2/info/: info.txt
kb/ickb/files/: OneDrive Online (web) Guide v1.0.pdf.meta.yaml
src/docfetcher/: __init__.py  helpers.py  indexer.py  renderer.py  state.py  streamlit.py  test_run.py  ui_helpers.py  ui_streamlit.py
src/docfetcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/docfetcher/prebuild/: indexer.py
src/docfetcher/ui/: landing.py  preview.py  search.py  site_browse.py  site_select.py
